[gd_scene load_steps=31 format=4 uid="uid://bechrj50hloau"]

[ext_resource type="PackedScene" uid="uid://djwpodvekhfy8" path="res://atores/player.tscn" id="1_dvnh0"]
[ext_resource type="Texture2D" uid="uid://o41348whci8r" path="res://assets/free-city-backgrounds-pixel-art/city 1/1.png" id="1_p505y"]
[ext_resource type="Script" uid="uid://crtvv8psthon8" path="res://fase_1.gd" id="1_y0ivt"]
[ext_resource type="Texture2D" uid="uid://va1oib1lst0y" path="res://assets/free-city-backgrounds-pixel-art/city 1/2.png" id="2_jqer6"]
[ext_resource type="Texture2D" uid="uid://cnytx17okmlgw" path="res://assets/free-city-backgrounds-pixel-art/city 1/3.png" id="3_t04ws"]
[ext_resource type="Texture2D" uid="uid://breihcsiq7uy1" path="res://assets/free-city-backgrounds-pixel-art/city 1/4.png" id="4_nqopb"]
[ext_resource type="Texture2D" uid="uid://ca78hu01m6jsf" path="res://assets/free-city-backgrounds-pixel-art/city 1/5.png" id="5_krpwl"]
[ext_resource type="Texture2D" uid="uid://b4q5clwrima6x" path="res://assets/warped city files/warped city files/Assets/ENVIRONMENT/tileset.png" id="7_uruu4"]
[ext_resource type="Texture2D" uid="uid://b4yt8hnqv5vwl" path="res://assets/Sidescroller Shooter - Central City/Sidescroller Shooter - Central City/Assets/Tiles.png" id="8_8kud5"]
[ext_resource type="AudioStream" uid="uid://bo2va0itdagrp" path="res://assets/music/Synthetic Whisper-loop.ogg" id="9_qy0vw"]
[ext_resource type="PackedScene" uid="uid://dv3k63nrclvip" path="res://hud/pergunta.tscn" id="11_m4eng"]
[ext_resource type="PackedScene" uid="uid://cbhuuw6g2lyim" path="res://collectibles/alternativa.tscn" id="12_oowkq"]
[ext_resource type="PackedScene" uid="uid://cl88rryocxaac" path="res://collectibles/alternativa_b.tscn" id="13_0gy0s"]
[ext_resource type="PackedScene" uid="uid://cjrkjboo2siej" path="res://collectibles/alternativa_c.tscn" id="14_36560"]
[ext_resource type="PackedScene" uid="uid://c2dcybiuschqu" path="res://collectibles/alternativa_d.tscn" id="15_o2x5t"]
[ext_resource type="PackedScene" uid="uid://durxk736hk230" path="res://collectibles/alternativa_e.tscn" id="16_0qmbn"]
[ext_resource type="PackedScene" uid="uid://bnpju53qiwwvx" path="res://hud/timer.tscn" id="17_252ju"]
[ext_resource type="PackedScene" uid="uid://dlui33rrsgksj" path="res://fases/pause_menu.tscn" id="18_g1dme"]
[ext_resource type="PackedScene" uid="uid://dhdn24ofwfwm" path="res://fases/game_over.tscn" id="19_8c3j4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5w4f3"]
size = Vector2(217, 942)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jl8n7"]
size = Vector2(1494, 168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3gyck"]
size = Vector2(1154, 146.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1tgcq"]
size = Vector2(320, 1140)

[sub_resource type="TileMapPattern" id="TileMapPattern_yqp04"]
tile_data = PackedInt32Array(0, 1, 0)

[sub_resource type="TileMapPattern" id="TileMapPattern_3654c"]
tile_data = PackedInt32Array(0, 131073, 4, 65536, 131073, 6, 1, 196609, 4, 65537, 196609, 6, 2, 196609, 4, 65538, 196609, 6, 3, 196609, 4, 65539, 196609, 6, 4, 196609, 4, 65540, 196609, 6, 5, 196609, 4, 65541, 196609, 6, 6, 196609, 4, 65542, 196609, 6, 7, 262145, 4, 65543, 262145, 6)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rvgvp"]
resource_name = "warped_city"
texture = ExtResource("7_uruu4")
1:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
7:1/0 = 0
9:1/0 = 0
10:1/0 = 0
12:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
1:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
7:2/0 = 0
9:2/0 = 0
10:2/0 = 0
12:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
18:2/0 = 0
19:2/0 = 0
1:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
7:3/0 = 0
9:3/0 = 0
10:3/0 = 0
12:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
18:3/0 = 0
19:3/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
9:4/0 = 0
10:4/0 = 0
12:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
18:4/0 = 0
19:4/0 = 0
2:6/0 = 0
4:6/0 = 0
8:6/0 = 0
10:6/0 = 0
11:6/0 = 0
12:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
20:6/0 = 0
22:6/0 = 0
2:7/0 = 0
4:7/0 = 0
8:7/0 = 0
10:7/0 = 0
11:7/0 = 0
12:7/0 = 0
14:7/0 = 0
15:7/0 = 0
16:7/0 = 0
18:7/0 = 0
20:7/0 = 0
22:7/0 = 0
4:8/0 = 0
8:8/0 = 0
14:8/0 = 0
15:8/0 = 0
16:8/0 = 0
7:9/0 = 0
8:9/0 = 0
11:9/0 = 0
12:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
4:10/0 = 0
11:10/0 = 0
12:10/0 = 0
4:11/0 = 0
6:11/0 = 0
6:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(0.719435, -8, 8, 5.75548, 8, 5.57562, 8, -8)
7:11/0 = 0
7:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, -8, 8, 8, 8, 8, -8)
7:11/0/physics_layer_0/polygon_0/one_way = true
8:11/0 = 0
8:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(8, 8, -8, 8, -8, -8, 8, -8)
8:11/0/physics_layer_0/polygon_0/one_way = true
9:11/0 = 0
9:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, 5.93534, -8, -8, -1.07915, -8, -0.899294, -8)
14:11/0 = 0
15:11/0 = 0
15:11/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
16:11/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_8tiae"]
resource_name = "Sidescroller Shooter"
texture = ExtResource("8_8kud5")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:0/0/physics_layer_0/polygon_0/one_way = true
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, -8, -8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0/physics_layer_0/polygon_0/one_way = true
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, 8, -8)
5:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
0:4/0 = 0

[sub_resource type="TileSet" id="TileSet_2ayi0"]
physics_layer_0/collision_layer = 2
sources/0 = SubResource("TileSetAtlasSource_rvgvp")
sources/1 = SubResource("TileSetAtlasSource_8tiae")
pattern_0 = SubResource("TileMapPattern_yqp04")
pattern_1 = SubResource("TileMapPattern_3654c")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_60p4r"]
texture = ExtResource("8_8kud5")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/size_in_atlas = Vector2i(2, 2)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -15.9688, 15.9688, -16.0313, 16, 16.0625, -16, 15.9688)
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0

[sub_resource type="TileSet" id="TileSet_3tmfl"]
physics_layer_0/collision_layer = 2
sources/6 = SubResource("TileSetAtlasSource_60p4r")

[node name="fase1" type="Node2D"]
script = ExtResource("1_y0ivt")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1, 200)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
texture_filter = 1
position = Vector2(1, -201)
scale = Vector2(2.00347, 1.85185)
texture = ExtResource("1_p505y")
centered = false
metadata/_edit_lock_ = true

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1, 200)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
texture_filter = 1
position = Vector2(1, -201)
scale = Vector2(2.003, 1.852)
texture = ExtResource("2_jqer6")
centered = false
metadata/_edit_lock_ = true

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1, 200)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
texture_filter = 1
position = Vector2(1, -201)
scale = Vector2(2.003, 1.852)
texture = ExtResource("3_t04ws")
centered = false
metadata/_edit_lock_ = true

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1, 200)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
texture_filter = 1
position = Vector2(1, -201)
scale = Vector2(2.003, 1.852)
texture = ExtResource("4_nqopb")
centered = false
metadata/_edit_lock_ = true

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(-1, 200)
metadata/_edit_lock_ = true

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
texture_filter = 1
position = Vector2(1, -201)
scale = Vector2(2.003, 1.852)
texture = ExtResource("5_krpwl")
centered = false
metadata/_edit_lock_ = true

[node name="limite_mapa" type="StaticBody2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="limite_mapa"]
position = Vector2(-110, 189)
shape = SubResource("RectangleShape2D_5w4f3")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="limite_mapa"]
position = Vector2(707, -205)
shape = SubResource("RectangleShape2D_jl8n7")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="limite_mapa"]
position = Vector2(573, 693)
shape = SubResource("RectangleShape2D_3gyck")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="limite_mapa"]
position = Vector2(1313, 269)
shape = SubResource("RectangleShape2D_1tgcq")

[node name="tilesets" type="Node2D" parent="."]

[node name="plataformas" type="TileMapLayer" parent="tilesets"]
texture_filter = 1
position = Vector2(0, -8)
tile_map_data = PackedByteArray("AAABACUAAAAPAAsAAAACACUAAAAPAAsAAAADACUAAAAPAAsAAAAEACUAAAAPAAsAAAAFACUAAAAPAAsAAAANACUAAAAPAAsAAAAOACUAAAAPAAsAAAAPACUAAAAPAAsAAAAQACUAAAAPAAsAAAARACUAAAAPAAsAAAASACUAAAAPAAsAAAATACUAAAAPAAsAAAAUACUAAAAPAAsAAAAVACUAAAAPAAsAAAAWACUAAAAPAAsAAAAXACUAAAAPAAsAAAAYACUAAAAPAAsAAAAZACUAAAAPAAsAAAAaACUAAAAPAAsAAAAbACUAAAAPAAsAAAAcACUAAAAPAAsAAAAdACUAAAAPAAsAAAAeACUAAAAPAAsAAAAfACUAAAAPAAsAAAAgACUAAAAPAAsAAAAhACUAAAAPAAsAAAAiACUAAAAPAAsAAAAjACUAAAAPAAsAAAAkACUAAAAPAAsAAAAlACUAAAAPAAsAAAAmACUAAAAPAAsAAAAnACUAAAAPAAsAAAAoACUAAAAPAAsAAAApACUAAAAPAAsAAAAqACUAAAAPAAsAAAArACUAAAAPAAsAAAAsACUAAAAPAAsAAAAtACUAAAAPAAsAAAAuACUAAAAPAAsAAAAvACUAAAAPAAsAAAAwACUAAAAPAAsAAAAxACUAAAAPAAsAAAAyACUAAAAPAAsAAAAzACUAAAAPAAsAAAA0ACUAAAAPAAsAAAA1ACUAAAAPAAsAAAA2ACUAAAAPAAsAAAA3ACUAAAAPAAsAAAA4ACUAAAAPAAsAAAA5ACUAAAAPAAsAAAA6ACUAAAAPAAsAAAA7ACUAAAAPAAsAAAA8ACUAAAAPAAsAAAA9ACUAAAAPAAsAAAA+ACUAAAAPAAsAAAA/ACUAAAAPAAsAAABAACUAAAAPAAsAAABBACUAAAAPAAsAAABCACUAAAAPAAsAAABDACUAAAAPAAsAAABEACUAAAAPAAsAAABFACUAAAAPAAsAAABGACUAAAAPAAsAAABHACUAAAAPAAsAAAD//yYAAAAPAAwAAAAAACYAAAAPAAwAAAABACYAAAAPAAwAAAACACYAAAAPAAwAAAADACYAAAAPAAwAAAAEACYAAAAPAAwAAAAFACYAAAAPAAwAAAAGACYAAAAPAAwAAAAHACYAAAAPAAwAAAAIACYAAAAPAAwAAAAJACYAAAAPAAwAAAAKACYAAAAPAAwAAAALACYAAAAPAAwAAAAMACYAAAAPAAwAAAANACYAAAAPAAwAAAAOACYAAAAPAAwAAAAPACYAAAAPAAwAAAAQACYAAAAPAAwAAAARACYAAAAPAAwAAAASACYAAAAPAAwAAAATACYAAAAPAAwAAAAUACYAAAAPAAwAAAAVACYAAAAPAAwAAAAWACYAAAAPAAwAAAAXACYAAAAPAAwAAAAYACYAAAAPAAwAAAAZACYAAAAPAAwAAAAaACYAAAAPAAwAAAAbACYAAAAPAAwAAAAcACYAAAAPAAwAAAAdACYAAAAPAAwAAAAeACYAAAAPAAwAAAAfACYAAAAPAAwAAAAgACYAAAAPAAwAAAAhACYAAAAPAAwAAAAiACYAAAAPAAwAAAAjACYAAAAPAAwAAAAkACYAAAAPAAwAAAAlACYAAAAPAAwAAAAmACYAAAAPAAwAAAAnACYAAAAPAAwAAAAoACYAAAAPAAwAAAApACYAAAAPAAwAAAAqACYAAAAPAAwAAAArACYAAAAPAAwAAAAsACYAAAAPAAwAAAAtACYAAAAPAAwAAAAuACYAAAAPAAwAAAAvACYAAAAPAAwAAAAwACYAAAAPAAwAAAAxACYAAAAPAAwAAAAyACYAAAAPAAwAAAAzACYAAAAPAAwAAAA0ACYAAAAPAAwAAAA1ACYAAAAPAAwAAAA2ACYAAAAPAAwAAAA3ACYAAAAPAAwAAAA4ACYAAAAPAAwAAAA5ACYAAAAPAAwAAAA6ACYAAAAPAAwAAAA7ACYAAAAPAAwAAAA8ACYAAAAPAAwAAAA9ACYAAAAPAAwAAAA+ACYAAAAPAAwAAAA/ACYAAAAPAAwAAABAACYAAAAPAAwAAABBACYAAAAPAAwAAABCACYAAAAPAAwAAABDACYAAAAPAAwAAABEACYAAAAPAAwAAABFACYAAAAPAAwAAABGACYAAAAPAAwAAABHACYAAAAPAAwAAABIACYAAAAPAAwAAAAGACUAAAAPAAsAAAAHACUAAAAPAAsAAAAIACUAAAAPAAsAAAAJACUAAAAPAAsAAAAKACUAAAAPAAsAAAALACUAAAAPAAsAAAAMACUAAAAPAAsAAAAAACUAAAAPAAsAAAATACMAAQADAAYAAAD+/yUAAAAPAAsAAAD//yUAAAAPAAsAAABIACUAAAAPAAsAAAD+/yYAAAAPAAwAAABJACYAAAAPAAwAAABJACUAAAAPAAsAAAAGACEAAAAHAAsAAAAHACEAAAAIAAsAAAAIACEAAAAHAAsAAAAJACEAAAAIAAsAAAAKACEAAAAHAAsAAAALACEAAAAIAAsAAAAMACEAAAAJAAsAAAAFACEAAAAGAAsAAAAPAB4AAAAGAAsAAAAQAB4AAAAHAAsAAAARAB4AAAAIAAsAAAASAB4AAAAHAAsAAAATAB4AAAAIAAsAAAAUAB4AAAAHAAsAAAAVAB4AAAAIAAsAAAAWAB4AAAAJAAsAAAA8ABsAAAAGAAsAAAA9ABsAAAAHAAsAAAA+ABsAAAAIAAsAAAA/ABsAAAAHAAsAAABAABsAAAAIAAsAAABBABsAAAAHAAsAAABCABsAAAAIAAsAAABDABsAAAAJAAsAAAABABsAAAAGAAsAAAACABsAAAAHAAsAAAADABsAAAAIAAsAAAAEABsAAAAHAAsAAAAFABsAAAAIAAsAAAAGABsAAAAHAAsAAAAHABsAAAAIAAsAAAAIABsAAAAJAAsAAAAzABcAAAAGAAsAAAA0ABcAAAAHAAsAAAA1ABcAAAAIAAsAAAA2ABcAAAAHAAsAAAA3ABcAAAAIAAsAAAA4ABcAAAAHAAsAAAA5ABcAAAAIAAsAAAA6ABcAAAAJAAsAAAA=")
tile_set = SubResource("TileSet_2ayi0")

[node name="decoracao" type="TileMapLayer" parent="tilesets"]
tile_map_data = PackedByteArray("AAArACMABgAAAAIAAAAtACEABgAAAAIAAAAtACMABgAAAAIAAAAvAB8ABgAAAAIAAAAvACEABgAAAAIAAAAvACMABgAAAAIAAAAxAB0ABgAAAAIAAAAxAB8ABgAAAAIAAAAxACEABgAAAAIAAAAxACMABgAAAAIAAAAzAB0ABgAAAAIAAAAzAB8ABgAAAAIAAAAzACEABgAAAAIAAAAzACMABgAAAAIAAAA1AB0ABgAAAAIAAAA1AB8ABgAAAAIAAAA1ACEABgAAAAIAAAA1ACMABgAAAAIAAAA3AB0ABgAAAAIAAAA3AB8ABgAAAAIAAAA3ACEABgAAAAIAAAA3ACMABgAAAAIAAAA5ACEABgAAAAIAAAA5ACMABgAAAAIAAAA7ACMABgAAAAIAAAA5AB8ABgAAAAIAAAA7ACEABgAAAAIAAAA9ACMABgAAAAIAAAA=")
tile_set = SubResource("TileSet_3tmfl")

[node name="CharacterBody2D" parent="." instance=ExtResource("1_dvnh0")]
position = Vector2(578, 553)

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_qy0vw")
autoplay = true
parameters/looping = true

[node name="pergunta" parent="." instance=ExtResource("11_m4eng")]

[node name="Timer" parent="." instance=ExtResource("17_252ju")]

[node name="PauseMenu" parent="." instance=ExtResource("18_g1dme")]
process_mode = 3
visible = false

[node name="GameOver" parent="." instance=ExtResource("19_8c3j4")]
process_mode = 3
visible = false
offset_left = 174.485
offset_top = 47.59
offset_right = 174.485
offset_bottom = 47.59

[node name="alternativa_a" parent="." instance=ExtResource("12_oowkq")]
position = Vector2(40, 394)

[node name="alternativa_b" parent="." instance=ExtResource("13_0gy0s")]
position = Vector2(843, 337)

[node name="alternativa_c" parent="." instance=ExtResource("14_36560")]
position = Vector2(1061, 398)

[node name="alternativa_d" parent="." instance=ExtResource("15_o2x5t")]
position = Vector2(346, 448)

[node name="alternativa_e" parent="." instance=ExtResource("16_0qmbn")]
position = Vector2(106, 495)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="collected" from="alternativa_a" to="." method="_on_alternativa_a_collected"]
[connection signal="collected" from="alternativa_b" to="." method="_on_alternativa_b_collected"]
[connection signal="collected" from="alternativa_c" to="." method="_on_alternativa_c_collected"]
[connection signal="collected" from="alternativa_d" to="." method="_on_alternativa_d_collected"]
[connection signal="collected" from="alternativa_e" to="." method="_on_alternativa_e_collected"]
